2009-02-19  Richard Hult  <richard@imendio.com>

	* autogen.sh: Use automake 1.10 by default, patch from Gaute Hope,
	bug #560025.

2009-02-19  Richard Hult  <richard@imendio.com>

	* src/Makefile.am: Patch from cygwin ports maintainer to fix bug
	#564446, libdevhelp-1 Cygwin patch.

2009-02-19  Enrico Tröge  <enrico.troeger@uvena.de>

	* src/dh-assistant-view.c: (assistant_view_set_link):
	* src/dh-book-tree.c: (book_tree_find_uri_foreach):
	* src/dh-link.c: (link_free), (dh_link_new):
	* src/dh-link.h: Use file: URIs instead of local paths, fixes use
	with more recent webkit versions.

2009-01-20  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>

	reviewed by: Richard Hult.

	* src/dh-parser.c: (parser_start_node_book),
	(parser_start_node_chapter), (parser_start_node_keyword):
	Enclosed the elements names between double quotes in some error
	messages. Closes bug #566454.

2009-01-19  Richard Hult  <richard@imendio.com>

	* Release 0.23.

	* configure.ac: Bump version.

2008-12-01  Richard Hult  <richard@imendio.com>

	* NEWS: Update for 0.22 release.

	* src/dh-preferences.c: (preferences_system_fonts_toggled_cb),
	(preferences_connect_conf_listeners): Fix build with recent gcc
	versions.

	* src/dh-util.c: (dh_util_font_get_variable), (font_notify_cb):
	Fix the font size and remove debug output.

2008-12-01  Richard Hult  <richard@imendio.com>

	* NEWS:
	* src/dh-preferences.c: (preferences_system_fonts_toggled_cb),
	(preferences_connect_conf_listeners):
	* src/dh-util.c: (dh_util_font_get_variable), (font_notify_cb):

2008-12-01  Richard Hult  <richard@imendio.com>

	* NEWS: Update for 0.22 release.

2008-11-28  Richard Hult  <richard@imendio.com>

	* src/dh-util.[ch]: Add code to handle updating the font settings
	for all open web views. Needs to be split out in its own file
	later.

2008-11-28  Richard Hult  <richard@imendio.com>

	* src/dh-preferences.c: Remove the code that previously was used